--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RGBStudy</string>
+    <string name="app_name">多维智能检测</string>
 
     <string name="driver">com.mysql.jdbc.Driver</string>
     <string name="url">jdbc:mysql://120.79.219.78:3306/color </string>
