(1) rename Check to PointCheck (2) add PictureCheck activity (3) complie success, have not test yet.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_activity_test_basic">TestBasicActivity</string>
+    <string name="title_activity_picture_check">PictureCheckActivity</string>
+    <string name="title_activity_picture_check_result">PictureCheckResultActivity</string>
 </resources>
