--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="app_name">多维智能检测</string>
 
     <string name="driver">com.mysql.jdbc.Driver</string>
-    <string name="url">jdbc:mysql://120.79.219.78:3306/color </string>
-    <string name="user">hombio</string>
-    <string name="pass">hombio</string>
+    <string name="url">jdbc:mysql://139.159.188.31:3306/colorCheck </string>
+    <string name="user">root</string>
+    <string name="pass">root</string>
     <string name="title_activity_check_detail">CheckDetailActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
@@ -14,4 +14,5 @@
     <string name="title_activity_picture_check">PictureCheckActivity</string>
     <string name="title_activity_picture_check_result">PictureCheckResultActivity</string>
     <string name="title_activity_picture_sample_collect">PictureSampleCollectActivity</string>
+    <string name="prefix_url">http://139.159.188.31:8080/colorCheckServer</string>
 </resources>
