--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="user">root</string>
     <string name="pass">root</string>
     <string name="prefix_url">http://139.159.188.31:8080/colorCheckServer/</string>
+    <string name="uploadImage_url">http://139.159.188.31:8080/colorCheckServer/springUpload</string>
 
     <string name="title_activity_check_detail">CheckDetailActivity</string>
     <string name="title_home">Home</string>
@@ -15,4 +16,5 @@
     <string name="title_activity_picture_check">PictureCheckActivity</string>
     <string name="title_activity_picture_check_result">PictureCheckResultActivity</string>
     <string name="title_activity_picture_sample_collect">PictureSampleCollectActivity</string>
+
 </resources>
