--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">QuickCheckOnColor</string>
+    <string name="app_name">基于Android的试纸快速检测APP</string>
     <string name="driver">com.mysql.jdbc.Driver</string>
     <!--数据库和WEb端口-->
     <string name="url">jdbc:mysql://139.159.188.31:3306/colorCheck/</string>
     <string name="user">root</string>
     <string name="pass">root</string>
     <string name="prefix_url">http://139.159.188.31:8080/colorCheckServer/</string>
-    <string name="uploadImage_url">http://139.159.188.31:8080/colorCheckServer/springUpload</string>
+    <string name="uploadImage_url">springUpload</string>
 
     <string name="title_activity_check_detail">CheckDetailActivity</string>
     <string name="title_home">Home</string>
