--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="title_activity_picture_check">PictureCheckActivity</string>
     <string name="title_activity_picture_check_result">PictureCheckResultActivity</string>
     <string name="title_activity_picture_sample_collect">PictureSampleCollectActivity</string>
+    <string name="check_result">结果</string>
 
 </resources>
